--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -146,8 +146,13 @@ jobs:
         run: |
           arch -${{matrix.arch}} $PYTHON -m build
 
+      - name: Publish source dist
+        if: matrix.python-version == '3.10'
+        run: |
+          $PYTHON -m twine upload -u __token__ -p "${PYPI_PASSWORD}" dist/*.tar.gz
+
       - name: Publish wheel
         env:
           PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: |
-          $PYTHON -m twine upload -u __token__ -p "${PYPI_PASSWORD}" dist/*
+          $PYTHON -m twine upload -u __token__ -p "${PYPI_PASSWORD}" dist/*.whl
