--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -149,7 +149,7 @@ jobs:
       - name: Publish source dist
         if: matrix.python-version == '3.10' && matrix.arch == 'arm64'
         run: |
-          $PYTHON -m twine upload -u __token__ -p "${PYPI_PASSWORD}" dist/*.tar.gz
+          $PYTHON -m twine upload --verbose -u __token__ -p "${PYPI_PASSWORD}" dist/*.tar.gz
 
       - name: Publish wheel
         env:
